rewrite the wrapper sort